# supaFast

./: .gitignore  README.md  __init__.py  auth.py  config.py  create_jwt.py  create_jwt_guest.py  generate-jwt.js  install.sh  launch.sh  legacy_test.sh  new_jwt_test.sh  pyproject.toml  requirements.txt  test.sh  test_auth.sh
gcp_function/: .env.yaml  .env.yaml.template  .gitignore  README.md  main.py  requirements.txt  set_envs.sh
src/fastapi_supabase/: __init__.py  auth.py  config.py  jwt_checker.py  legacy_jwt_checker.py  middleware.py  models.py  setup.py
src/template/: .env.template  launch.sh  main.py
supabase_tests/: .env.template  get-test-jwt.js  package-lock.json  package.json  server_test.py  test-jwt.json  test_jwt_roles.py  test_jwt_verification.py
template/: install.sh  main.py  middleware.py  simpleJWTChecker.py  test.sh
tofu/: .gitignore  main.tf
your_project/: .env  auth.py  config.py  main.py  requirements.txt
